--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "autorender-bug",
   "version": "0.0.0",
+  "main": "autorender-bug/server.stache!done-autorender",
   "description": "",
   "homepage": "",
+  "scripts": {
+    "test": "testee src/test.html --browsers firefox --reporter Spec",
+    "startds": "done-serve --port 8080",
+    "start": "NODE_ENV=production node ./bin/www",
+    "develop": "done-serve --develop --port 8080",
+    "document": "documentjs",
+    "build": "node build",
+    "build:server": "steal-tools build --no-minify"
+  },
   "author": {
     "name": "",
     "email": "",
     "url": ""
   },
-  "scripts": {
-    "test": "testee src/test.html --browsers firefox --reporter Spec",
-    "start": "done-serve --port 8080",
-    "develop": "done-serve --develop --port 8080",
-    "document": "documentjs",
-    "build": "node build"
-  },
-  "main": "autorender-bug/index.stache!done-autorender",
-  "files": [
-    "src"
-  ],
   "keywords": [],
   "system": {
-    "main": "autorender-bug/index.stache!done-autorender",
     "ext": {
       "ejs": "can/view/ejs/system",
       "mustache": "can/view/mustache/system",
@@ -50,6 +48,7 @@
     "done-component": "^0.4.0",
     "done-css": "~2.0.2",
     "done-serve": "^0.2.0",
+    "done-ssr": "^0.13.5",
     "generator-donejs": "^0.9.0",
     "jquery": "~2.2.1",
     "steal": "^1.6.2"
@@ -64,5 +63,18 @@
     "testee": "^0.2.4",
     "donejs-cli": "^0.9.4",
     "can-fixture": "^0.1.2"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "useBuiltIns": "usage",
+          "targets": {
+            "node": "8"
+          }
+        }
+      ]
+    ]
   }
 }
