--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "NODE_ENV=production node ./bin/www",
     "develop": "done-serve --develop --port 8080",
     "document": "documentjs",
-    "build": "node build",
+    "build": "babel src --out-dir lib",
     "build:server": "steal-tools build --no-minify"
   },
   "author": {
@@ -31,16 +31,13 @@
       "can"
     ],
     "directories": {
-      "lib": "src"
+      "lib": "js"
     },
-    "configDependencies": [
-      "live-reload",
-      "node_modules/can-zone/register"
-    ],
-    "transpiler": "babel",
-    "npmAlgorithm": "flat"
+    "npmAlgorithm": "flat",
+    "minify": true
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "can": "^2.3.33",
     "can-connect": "^0.5.0",
     "can-zone": "^0.5.0",
@@ -49,20 +46,24 @@
     "done-css": "~2.0.2",
     "done-serve": "^0.2.0",
     "done-ssr": "^0.13.5",
+    "feathers": "^1.3.0",
     "generator-donejs": "^0.9.0",
     "jquery": "~2.2.1",
     "steal": "^1.6.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.4.3",
+    "can-fixture": "^0.1.2",
     "documentjs": "^0.4.2",
+    "donejs-cli": "^0.9.4",
     "donejs-deploy": "^0.4.0",
     "funcunit": "~3.0.0",
-    "steal-qunit": "^0.1.1",
     "steal-less": "^1.2.2",
+    "steal-qunit": "^0.1.1",
     "steal-tools": "^1.10.0",
-    "testee": "^0.2.4",
-    "donejs-cli": "^0.9.4",
-    "can-fixture": "^0.1.2"
+    "testee": "^0.2.4"
   },
   "babel": {
     "presets": [
